--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,16 @@
 subprojects {
-    apply plugin: 'java'
+    buildscript {
+        ext.kotlin_version = '1.0.1-2'
+        repositories {
+            mavenCentral()
+        }
+        dependencies {
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        }
+    }
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    apply plugin: 'kotlin'
+    apply plugin: 'application'
 
     repositories {
         mavenCentral()
@@ -10,6 +18,8 @@ subprojects {
 
     dependencies {
         testCompile 'junit:junit:4.12'
+        compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+        testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     }
 
     version = '1.0'
