--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ buildscript {
 }
 
 subprojects {
-
     apply plugin: 'kotlin'
     apply plugin: 'application'
 
@@ -24,4 +23,14 @@ subprojects {
     }
 
     version = '1.0'
+}
+
+project('lang-ui') {
+    repositories {
+        maven { url 'http://repository.jetbrains.com/all' }
+    }
+
+    dependencies {
+        compile 'org.wasabi:wasabi:0.1-SNAPSHOT'
+    }
 }
