--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
+    }
 }
 
 subprojects {
@@ -32,11 +35,14 @@ project('lang-core') {
 }
 
 project('lang-ui') {
-    repositories {
-        maven { url 'http://repository.jetbrains.com/all' }
-    }
+    apply plugin: 'spring-boot'
+
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
     dependencies {
-        compile 'org.wasabi:wasabi:0.1-SNAPSHOT'
+        compile("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+        testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
