--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ project('lang-ui') {
     targetCompatibility = 1.8
 
     dependencies {
+        compile project(":lang-core")
         compile("org.springframework.boot:spring-boot-starter-web")
         compile("org.springframework.boot:spring-boot-starter-actuator")
         testCompile("org.springframework.boot:spring-boot-starter-test")
